--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "mongoose": "^8.12.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
