--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -38,12 +39,14 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cron": "^4.3.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.12.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
