--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - PORT=8080
       - NODE_ENV=production
-      - MONGO_URL=mongodb+srv://vvm1004:test123@cluster0.4a2h5sc.mongodb.net/Cap2?retryWrites=true&w=majority&appName=Cluster
+      - MONGODB_URL=mongodb+srv://vvm1004:test123@cluster0.4a2h5sc.mongodb.net/Cap2?retryWrites=true&w=majority&appName=Cluster
     expose:
       - 8080
     ports:
