--- a/package.json
+++ b/package.json
@@ -39,14 +39,12 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
-    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cron": "^4.3.0",
     "helmet": "^8.1.0",
-    "ioredis": "^5.6.1",
     "mongoose": "^8.12.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
@@ -54,6 +52,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "redis": "^5.1.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
